--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "https://jvlsg.github.io/"
 github_username: jvlsg 
 
 # Build settings
-theme: minima 
+theme: jekyll-theme-tactile 
 plugins:
   - jekyll-feed
 
