--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "https://jvlsg.github.io/"
 github_username: jvlsg 
 
 # Build settings
-theme: jekyll-theme-tactile 
+theme: jekyll-theme-minimal 
 plugins:
   - jekyll-feed
 
